--- a/carte.html
+++ b/carte.html
@@ -10,20 +10,20 @@
 <style></style>
 </head>
 <body>
-	<div id="container" class="svg-container" height="200px"></div>
-	<div id="container2" class="svg-container" height="200px"></div>
-	<div id="container3" class="svg-container" height="200px"></div>
-	<div id="container4" class="svg-container" height="200px"></div>
-	<div id="container5" class="svg-container" height="100px"></div>
+	<div id="container" class="svg-container"></div>
+	<div id="container2" class="svg-container" ></div>
+	<div id="container3" class="svg-container" ></div>
+	<div id="container4" class="svg-container" ></div>
+	<div id="container5" class="svg-container" ></div>
 	<script>
-	createMap(5,46,2200,"container");
-	createMap(-61,15.5,10000,"container2");
-	createMap(-54,4.2,5000,"container3");
-	createMap(55.5,-21.2,30000,"container4");
-	createMap(45,-12.8,30000,"container5");
+	createMap(5,46,2200,"container",1400,700);
+	createMap(-61,15.5,2200,"container2",1400,700);
+	createMap(-54,4.2,2200,"container3",1400,700);
+	createMap(55.5,-21.2,2200,"container4",1400,700);
+	createMap(45,-12.8,2200,"container5", 1400,700);
 	</script>
-	5/46 -61/16 -54/5 55/-21 45/-12 -0/43
-	
+	w 1400 h700 /2
+	2200 10000 5000 30000 30000
 	
 
 </body>
