--- a/carte.html
+++ b/carte.html
@@ -10,17 +10,19 @@
 <style></style>
 </head>
 <body>
-	<div id="container" class="svg-container"></div>
-	<div id="container2" class="svg-container" ></div>
-	<div id="container3" class="svg-container" ></div>
-	<div id="container4" class="svg-container" ></div>
-	<div id="container5" class="svg-container" ></div>
+	<div id="container" class="svg-container container" weight="200"></div>
+	<div class="flexingz">
+		<div id="container2" class="svg-container container2" ></div>
+		<div id="container3" class="svg-container container3" ></div>
+		<div id="container4" class="svg-container container4" ></div>
+		<div id="container5" class="svg-container container5" ></div>
+	</div>
 	<script>
-	createMap(5,46,2200,"container",1400,700);
-	createMap(-61,15.5,2200,"container2",1400,700);
-	createMap(-54,4.2,2200,"container3",1400,700);
-	createMap(55.5,-21.2,2200,"container4",1400,700);
-	createMap(45,-12.8,2200,"container5", 1400,700);
+	createMap(5,46,2500,"container",1400,700);
+	createMap(-61,15.5,15000,"container2",1400,700);
+	createMap(-54,4.2,5000,"container3",1400,700);
+	createMap(55.5,-21.2,30000,"container4",1400,700);
+	createMap(45,-12.8,40000,"container5", 1400,700);
 	</script>
 	w 1400 h700 /2
 	2200 10000 5000 30000 30000
