--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Meteo</title>
 </head>
 <body>
+    <input type="number" id="day" placeholder="day">
+    <input type="text" id="station" placeholder="station">
+    <input type="number" id="hour" placeholder="hour">
+    <input type="button" id="show" value="show">
     
 </body>
 <footer>
