--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 
     <!-- ANOU -->
     <link rel="stylesheet" href="style/global.css" />
-    <script src="./style/dropdown.js"></script>
     <!-- ANOU -->
 
 </head>
@@ -100,6 +99,9 @@
     </div>
     
 </body>
+<footer>
+    <script type="module" src="/assets/js/main.js"></script>
+</footer>
 <script>
 
 
