Intégration map Index.html

--- a/carte.html
+++ b/carte.html
@@ -5,17 +5,17 @@
 <meta charset="utf-8">
 <title>My map</title>
 <script type="text/javascript" src="https://d3js.org/d3.v5.min.js"></script>
-<script type="text/javascript" src="script.js"></script>
-<link rel="stylesheet" type="text/css" href="map.css">
+<script type="text/javascript" src="/Meteo/assets/js/map-bryan.js"></script>
+<link rel="stylesheet" type="text/css" href="/Meteo/assets/style/map.css">
 <style></style>
 </head>
 <body>
-	<div id="container" class="svg-container container" weight="200"></div>
+	<div id="container" class="svg-container "></div>
 	<div class="flexingz">
-		<div id="container2" class="svg-container container2" ></div>
-		<div id="container3" class="svg-container container3" ></div>
-		<div id="container4" class="svg-container container4" ></div>
-		<div id="container5" class="svg-container container5" ></div>
+		<div id="container2" class="svg-container map2" ></div>
+		<div id="container3" class="svg-container map2" ></div>
+		<div id="container4" class="svg-container map2" ></div>
+		<div id="container5" class="svg-container map2" ></div>
 	</div>
 	<script>
 	createMap(5,46,2500,"container",1400,700);
