--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <!-- ANOU -->
     <link rel="stylesheet" href="assets/style/global.css" />
+    <script src="assets/js/dropdown.js"></script>
     <!-- ANOU -->
 
 </head>
@@ -41,18 +42,20 @@
                     </form>
 
                 </div>
-                <div class="col s4">
-                    
-                    <!--<div class="dropdown">
+                <div id="padd0" class="col s4">
+                    <!--DROPDOWN-->
+                    <div class="dropdown">
                         <button onclick="dropDown()" 
-                        class="waves-effect waves-dark btn">Dropdown</button>
-                        <div id="dropdown">
-                          <div onclick="dropDownClick(this)" value="1">Home</div>
-                          <div onclick="dropDownClick(this)" value="2">About</div>
-                          <div onclick="dropDownClick(this)" value="3">Contact</div>
+                        class="waves-effect waves-dark btn btn-dd">Dropdown</button>
+                        <div id="dropdown-content" class="z-depth-3" style="display: none;">
+                          <div class="dd-content" onclick="dropDown()" value="1">Home</div>
+                          <div class="dd-content" onclick="dropDown()" value="2">About</div>
+                          <div class="dd-content" onclick="dropDown()" value="3">Contact</div>
+                          <div class="dd-content" onclick="dropDown()" value="4">Sus</div>
+                          <div class="dd-content" onclick="dropDown()" value="5">Ceci est une phrase longue à titre de stress test.</div>
                         </div>
-                      </div>
-                    -->
+                    </div>
+                    <!--DROPDOWN-->
                 </div>
             </div>
         </div>
@@ -81,8 +84,8 @@
                 </div>
 
             </div>
-
             <!-- PRELOADER -->
+
         </div>
         <div class="right-tab-container">
             <ul class="tabs side-container">
@@ -106,5 +109,6 @@
     <script src="/assets/js/map-bryan.js"></script>
     <script src="/assets/js/graph-corentin.js"></script>
     <!-- TEMPORAIRE -->
+
 </footer>
 </html>
