--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
                     <div id="map4" class="svg-container map2" ></div>
                     <div id="map5" class="svg-container map2" ></div>
                 </div>
+                <script>d3.geoPath().projection(43.648833,7.209);</script>
+
                 
 
 
