--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
     <link rel="stylesheet" href="assets/style/fontawesome/css/fontawesome.min.css" />
     <link rel="stylesheet" href="assets/style/fontawesome/css/solid.min.css" />
 
-    <script src="https://d3js.org/d3.v4.js"></script>
+    <script src="https://d3js.org/d3.v5.js"></script>
     <!-- LIB -->
 
     <!-- ANOU -->
     <link rel="stylesheet" href="assets/style/global.css" />
     <!-- ANOU -->
+
+    <!-- MAP -->
+    <script type="text/javascript" src="https://d3js.org/d3.v5.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/style/map.css">
+    <!-- MAP -->
 
 </head>
 
@@ -33,15 +38,13 @@
         <div class="header-container">
             <div class="row">
                 <div class="col s8">
-
-                    <form action="#">
-                        <p class="range-field">
-                            <input type="range" id="timeline" min="0" max="28" />
-                        </p>
-                    </form>
-
+                    <p class="range-field">
+                        <input type="range" id="timeline" min="0" max="28" />
+                    </p>
                 </div>
+
                 <div id="padd0" class="col s4">
+
                     <!--DROPDOWN-->
                     <div class="dropdown">
                         <button onclick="dropDown()" class="waves-effect waves-dark btn btn-dd">Dropdown</button>
@@ -55,6 +58,7 @@
                         </div>
                     </div>
                     <!--DROPDOWN-->
+
                 </div>
             </div>
         </div>
@@ -64,6 +68,14 @@
 
     <div class="body-container">
         <div id="map-container" class="map-container">
+
+            <div id="map1" class="svg-container "></div>
+                <div class="flexingz">
+                    <div id="map2" class="svg-container map2" ></div>
+                    <div id="map3" class="svg-container map2" ></div>
+                    <div id="map4" class="svg-container map2" ></div>
+                    <div id="map5" class="svg-container map2" ></div>
+                </div>
 
             <!-- PRELOADER -->
             <div class="map-preloader">
@@ -91,12 +103,12 @@
                 <li class="tab col s3"><a href="#general-swipe" class="active">GENERAL</a></li>
                 <li class="tab col s3"><a href="#temperature-swipe">TEMPERATURE</a></li>
                 <li class="tab col s3"><a href="#pluie-swipe">PLUIE</a></li>
-                <li class="tab col s3"><a href="#pluie-swipe2">PLUIE</a></li>
+                <li class="tab col s3"><a href="#france-swipe">FRANCE</a></li>
             </ul>
             <div id="general-swipe" class="col s12 swipe">Test 1</div>
             <div id="temperature-swipe" class="col s12 swipe">Test 2</div>
             <div id="pluie-swipe" class="col s12 swipe">Test 3</div>
-            <div id="pluie-swipe2" class="col s12 swipe">Test 3</div>
+            <div id="france-swipe" class="col s12 swipe">Test 4</div>
         </div>
     </div>
     
@@ -104,10 +116,5 @@
 <footer>
     <script type="module" src="/assets/js/main.js"></script>
     <script src="/assets/js/dropDown.js"></script>
-
-    <!-- TEMPORAIRE -->
-    <script src="/assets/js/map-bryan.js"></script>
-    <!-- TEMPORAIRE -->
-
 </footer>
 </html>
